-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.344 2008-10-10 21:42:53 guru Exp $
-----------------------------------------------------------------------------------------
2008-10-10	pwessel
	* psbasemap.c		The -L syntax and description was out of date regarding
				how the options are to be specified.  Added new syntax
				explain functions for both map scale and map rose so these
				are consistently described for both psbasemap and pscoast.
				Also corrected the syntax and description in the man pages.
2008-10-08	remko
	* gmtmath.c:		Added INRANGE operator. Was added to grdmath on 2004-03-28,
				but was not available to gmtmath.

2008-10-06	pwessel
	* x2sys/x2sys_datalist.c:	Now has [experimental] support for using a correction
				table and can compute auxiliary data such as distance and az.
	* x2sys/x2sys_init.c:	Now, the dist and speed unit settings (-C -N) are set here
				and are kept with the TAG for use in other x2sys programs
				
2008-10-03	pwessel
	* x2sys/x2sys_report.c:	New program [experimental] to report statistics of crossovers.

2008-09-24	pwessel
	* grdtrend.c:		Moved the gauss matrix solver to gmt_vector.c and renamed
				it GMT_gauss.
	* gmt_vector.c:		Now holds general-purpose square matrix solver GMT_gauss.
				Eliminated hardwired limit on N.

2008-09-21	jluis
	* pslegend.c:		Now use remove function to delete script after completion;
				this avoids a Windows problem.
	
2008-09-20	pwessel
	* gmt_support.c:	Function GMT_get_arc did not check for division by zero.
				The -Gx<file>:<radius>[unit] in grdcontour passed the entire
				argument as the file name.
	* x2sys/x2sys_list.c:	New program [experimental] to extract a subset of crossovers
				from the list produced by x2sys_cross.  Intended to replace
				the old x_system/x_list.c.
	* x2sys/x2sys_solve.c:	New program [experimental] to determine systematic trends from
				a set of crossover errors.  Intended to replace the old